base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-service
spec:
  type: ClusterIP
  selector:
    app: auth-service
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
    name: http
